--- a/index.html
+++ b/index.html
@@ -1,116 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  
+  <title>Single Price Grid Component</title>
+</head>
+<body>
 
-    <title>Social proof section</title>
-  </head>
-  <body>
-
-    <div class="container">
-
-      <div class="main">
-
-        <div class="text">
-
-          <h1>10,000+ of our users love our products.</h1>
+  <div class="container">
+    <div class="main">
+      <header>
+        <h3>Join our community</h3>
+        <h4>30-day, hassle-free money back guarantee</h4>
+        <p>
+          Gain access to our full library of tutorials along with expert code reviews.
+          <br> 
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </header>
+      <div class="content">
+        <div class="left">
+          <h4>Monthly Subscription</h4>
+          <p><span>&dollar;29</span>per month</p>
+          <p class="basic">
+            Full access for less than &dollar;1 a day
+          </p>
+          <a href="#" target="_blank">Sign Up</a>
+        </div>
+        <div class="right">
+          <h4>Why Us</h4>
           <p>
-            We only provide great products combined with excellent customer service.
-            See what our satisfied customers are saying about our services.
+            Tutorials by industry experts <br>
+            Peer &amp; expert code review <br>
+            Coding exercises <br>
+            Access to our GitHub repos <br>
+            Community forum <br>
+            Flashcard decks <br>
+            New videos every week
           </p>
-
         </div>
-
-        <div class="rate">
-
-          <div class="box one">
-            <div class="stars">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-            </div>
-            <p>Rated 5 Stars in Reviews</p>
-          </div>
-
-          <div class="box two">
-            <div class="stars">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-            </div>
-            <p>Rated 5 Stars in Report Guru</p>
-          </div>
-
-          <div class="box three">
-            <div class="stars">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-              <img src="images/icon-star.svg" alt="star">
-            </div>
-            <p>Rated 5 Stars in BestTech</p>
-          </div>
-
-        </div>
-
-        <div class="cards">
-
-          <div class="card first">
-            <div class="photo">
-              <img src="images/image-colton.jpg" alt="person">
-              <p class="author">Colton Smith</p>
-              <p class="position">Verified Buyer</p>
-            </div>
-            <p class="review">
-              " We needed the same printed design as the one we had ordered a week prior.
-              Not only did they find the original order, but we also received it in time.
-              Excellent! "
-            </p>
-          </div>
-
-          <div class="card middle">
-            <div class="photo">
-              <img src="images/image-irene.jpg" alt="person">
-              <p class="author">Irene Roberts</p>
-              <p class="position">Verified Buyer</p>
-            </div>
-            <p class="review">
-              " Customer service is always excellent and very quick turn around. Completely
-              delighted with the simplicity of the purchase and the speed of delivery. "          
-            </p>
-          </div>
-
-          <div class="card bottom">
-            <div class="photo">
-              <img src="images/image-anne.jpg" alt="person">
-              <p class="author">Anne Wallace</p>
-              <p class="position">Verified Buyer</p>
-            </div>
-            <p class="review">
-              " Put an order with this company and can only praise them for the very high
-              standard. Will definitely use them again and recommend them to everyone! " 
-          </p>
-          </div>
-          
-        </div>
-
       </div>
-
     </div>
+  </div>
 
-  </body>
+</body>
 </html>
